[package]
name = "zmqrs-parser"
version = "0.1.0"
authors = ["Olaf Leidinger <oleid@mescharet.de>"]
edition = "2018"

[dependencies]

[dependencies.nom]
version = "5.1"
default-features = false

[dependencies.slog]
version = "2.5"
default-features = false

[dev-dependencies]
hex-literal = "0.2"
slog-term = "2.4"
slog-async = "2.3"