[package]
name = "zmqrs-protocol"
version = "0.1.0"
authors = ["Olaf Leidinger <oleid@mescharet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.slog]
version = "2.5"
default-features = false

[dependencies.zmqrs-parser]
version = "*"
path = "../zmqrs-parser"
